--- a/index.html
+++ b/index.html
@@ -5,9 +5,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jui Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<section class="top-banner">
+  <div class="half-width">
+    <h1>Welcome To</h1>
+    <h1><span class="color">Sumaiya Siddiqa Jui</span> World!</h1>
+    <h3>Build Climber and Train Stopper</h3>
+    
+    <p>
+      I am learning and mastering web development.I will
+      not stop until I become the web Development Hero. 
   
+  
+      I am Sumaiya Siddiqa Jui.I study in Computer Science 
+      & Engineering in Leading University.I want to be a full stack web developer 
+      
+    </p>
+    <a href="https://github.com/SumaiyaSiddiqaJui" target="_blank" class="link-button">HIRE ME</a>
+  </div> 
+  <div class="half-width">
+    <img src="showOff/portfolio.png" alt="">
+  
+  </div></section>
+  
+
+
 </body>
 </html>
